--- a/Galeria/estilos.css
+++ b/Galeria/estilos.css
@@ -31,7 +31,7 @@ body
 
 }
 
-#elTitulo
+.elTitulo
 
 {
 
@@ -41,6 +41,39 @@ body
 	color: white;
 	margin-top:5px;
 	margin-bottom:5px;
+
+}
+
+.elError
+
+{
+
+	text-align: center;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-size:100%;
+	color: rgba(208,1,27,0.49);
+
+}
+
+#error
+
+{
+
+	padding-bottom:15px;
+
+}
+
+.parrafos
+
+{
+
+	text-align: left;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-size:100%;
+	color: white;
+	margin-top:25px;
+	margin-bottom:25px;
+	margin-left: 10px;
 
 }
 
@@ -57,7 +90,7 @@ body
 
 #divFormulario
 {
-	
+
 	width: 350px;
 	position:relative;
 	margin: 0px auto;
@@ -75,7 +108,7 @@ body
 	min-width: 400px;
 	margin-top:40px;
 	margin-right:40px;
-	margin-bottom:40px;
+	margin-bottom:20px;
 	border: 2px solid #FFFFFF;
 }
 
@@ -90,7 +123,7 @@ body
 	min-width: 365px;
 	margin-top:40px;
 	margin-left:40px;
-	margin-bottom:40px;
+	margin-bottom:20px;
 	border: 2px solid #FFFFFF;
 
 }
