--- a/app/webroot/css/estilos.css
+++ b/app/webroot/css/estilos.css
@@ -1,11 +1,3 @@
-body
-{
-
-
-	background-color:#9D7D6E;
-
-}
-
 #centro
 
 {
@@ -17,6 +9,32 @@ body
 	margin-bottom: 3%;
   background-color:#BDAFA2;
   border-radius:25px;
+
+}
+
+#ElTexto
+
+{
+
+	width:90%;
+	min-width:700px;
+	margin: 0px auto;
+	margin-top: 3%;
+	margin-bottom: 3%;
+	padding-bottom: 15px;
+
+}
+
+.nada label
+
+{
+
+		text-align: center;
+		font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+		font-size:150%;
+		color: white;
+		margin-top:5px;
+		margin-bottom:5px;
 
 }
 
@@ -38,6 +56,32 @@ body
 	text-align: center;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-size:300%;
+	color: white;
+	margin-top:5px;
+	margin-bottom:5px;
+
+}
+
+.subTitulo
+
+{
+
+	text-align: center;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-size:200%;
+	color: white;
+	margin-top:5px;
+	margin-bottom:5px;
+
+}
+
+.logTitulo
+
+{
+
+	text-align: center;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-size:150%;
 	color: white;
 	margin-top:5px;
 	margin-bottom:5px;
@@ -71,6 +115,21 @@ body
 {
 
 	padding-bottom:15px;
+
+}
+
+.parrafosCentrados
+
+{
+
+	text-align:justify;
+	text-justify:inter-word;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-size:100%;
+	color: white;
+	margin-top:25px;
+	margin-bottom:25px;
+	margin-left: 10px;
 
 }
 
