--- a/app/webroot/css/estilos.css
+++ b/app/webroot/css/estilos.css
@@ -8,7 +8,7 @@
 	margin: 0px auto;
 	margin-top: 3%;
 	margin-bottom: 3%;
-  background-color:#BDAFA2;
+
   border-radius:25px;
 
 }
@@ -29,9 +29,9 @@
 {
 
 	text-align: center;
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-	font-size:300%;
-	color: white;
+	
+
+	
 	margin-top:5px;
 	margin-bottom:5px;
 
@@ -72,9 +72,8 @@
 {
 
 	text-align: left;
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-	font-size:100%;
-	color: white;
+
+	
 	margin-top:25px;
 	margin-bottom:25px;
 	margin-left: 10px;
@@ -99,8 +98,8 @@
 {
 
 	border-radius:10px;
-  height: 350px;
-	width: 350px;
+  height: 400px;
+	width: 900px;
 	position:relative;
   margin: 0px auto;
 	margin-top:25px;
@@ -126,7 +125,7 @@
 	margin-top:40px;
 	margin-right:40px;
 	margin-bottom:20px;
-	border: 2px solid #FFFFFF;
+	border: 2px solid #090808;
 }
 
 #izquierda
@@ -135,12 +134,12 @@
 
 	border-radius:10px;
 	float:left;
-	width: 41%;
+	width: 60%;
 	min-width: 365px;
 	margin-top:40px;
 	margin-left:40px;
 	margin-bottom:20px;
-	border: 2px solid #FFFFFF;
+	border: 2px solid #090808;
 
 }
 
